--- a/src/App.scss
+++ b/src/App.scss
@@ -292,7 +292,7 @@
             img{
                 width: 85%;
             }
-        }.scrollSoctainer{
+        }.scrollContainer{
             padding:0 0 2rem 0;
             display: flex;
             justify-content: flex-start;
