--- a/src/App.scss
+++ b/src/App.scss
@@ -322,13 +322,14 @@
     .full-screen-image{
         background-color: #202020e8;
         position: fixed;
-        top:0;
-        left:0;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
         width: 100vw;
         height: 100vh;
         z-index: 4;
         display: grid;
-        grid-template-rows: 13% 74% 13%;
+        grid-template-rows: 14% 72% 14%;
         .exit{
             display: flex;
             justify-content: flex-end;
@@ -342,7 +343,12 @@
             justify-content: center;
             align-items: center;
             img{
-                width: 40%;
+                border-radius: 3px;
+                padding:1rem;
+                background-color: #fff;
+                object-fit: contain;
+                width: 90%;
+                max-height: 500px;
             }
         }
         .arrows{
