--- a/src/App.scss
+++ b/src/App.scss
@@ -105,6 +105,9 @@
         background-size: cover;
         background-attachment: fixed;   
         background-repeat: no-repeat;
+        @media only screen and (orientation: portrait){
+            background-image: url('https://image.isu.pub/140121234930-e06afffaddb5b5aade1af41135a1136d/jpg/page_1.jpg');
+        }
     }
     .featured{
         min-height: 30vh; 
@@ -229,8 +232,8 @@
         a{text-decoration: none;}
         padding:4rem 0;
         .guitar{
-            height: 28rem;
-            width: 26rem;
+            height: 26rem;
+            width: 24rem;
             background-attachment: fixed;
             display: flex;
             flex-direction: column;
@@ -240,17 +243,23 @@
             text-align: center;
             cursor: pointer;
             background: rgb(26,16,31);
-            background: linear-gradient(106deg, rgba(26,16,31,1) 0%, rgba(23,24,40,1) 60%, rgba(23,23,39,1) 87%, rgba(23,22,38,1) 97%);
-            &:hover .img img{
-                width: 7.5rem;
-                transform:rotate(45deg);
-                transition: all .3s ease-in-out;
+            background: linear-gradient(106deg, rgba(26,16,31,1) 0%, rgba(23,24,40,1) 60%, rgba(23,23,39,1) 87%, rgba(23,22,38,1) 97%);   
+            @media only screen and (orientation:landscape){
+                &:hover .img img{
+                    width: 7.5rem;
+                    transform:rotate(45deg);
+                    transition: all .3s ease-in-out;
+                }
             }
             .img{
                 img{
                     width: 14rem;
                     transition: all .3s ease-in-out;
                 }
+            }         
+            @media only screen and (max-width:456px){
+                width: 80vw;
+                height: 55vh;                
             }
             .name{
                 color:#fff;
@@ -373,24 +382,35 @@
         form{
             position: relative;
             min-width: 65vw;
-            height: 7vh;
+            min-height: 7vh;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             background: #fff;
             padding:.1rem;
             @media only screen and (max-width:580px){
                 min-width: 90vw;
             }
+            @media only screen and (max-width:413px){
+                flex-direction: column;
+                justify-content: center;
+                background: transparent;
+            }
             input{
                 flex: 2;
                 color:#7A8AB0;
-                height: 100%;
                 padding: 0 0 0 1rem;
                 text-transform: uppercase;
                 letter-spacing: 1.5px;
                 border:none;
+                font-size: clamp(.55rem, 2vw, 1rem);
                 &:focus{
                     outline: none;
+                }
+                @media only screen and (max-width:413px){
+                    padding:1rem;
+                    min-width: 80vw;
+                    text-align: center;
                 }
             }
             button{
@@ -402,6 +422,9 @@
                 min-width: 2rem;
                 cursor: pointer;
                 padding:.5rem;
+                @media only screen and (max-width:413px){
+                    min-width: 80vw;
+                }
             }
         }
         img{
@@ -414,7 +437,7 @@
         align-items: center;
         padding:0 1rem;
         gap:1rem;
-        font-size: .75rem;
+        font-size: clamp(.55rem, .8vw, 1rem);
         text-transform: uppercase;
         color:#939393;
         background-color: #000;
@@ -423,7 +446,7 @@
             content: "";
             position: absolute;
             height: .75rem;
-            margin:.37rem 0 0 .47rem;
+            margin:.15rem 0 0 .47rem;
             width: 1px;
             background-color: #939393;
         }
