--- a/src/App.scss
+++ b/src/App.scss
@@ -1,93 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap');
-*{
-    padding:0;
-    margin:0;
+@import url("https://fonts.googleapis.com/css2?family=Palanquin+Dark:wght@400;500;600;700&display=swap");
+* {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    font-family: 'Palanquin Dark', sans-serif;
+    font-family: "Palanquin Dark", sans-serif;
 }
-.nav{
+.nav {
     min-height: 7.4vh;
     display: grid;
-    grid-template-columns:2rem auto auto 2rem;
-    grid-template-areas: 
-    ". logo links .";
+    grid-template-columns: 2rem auto auto 2rem;
+    grid-template-areas: ". logo links .";
     align-items: center;
     position: sticky;
-    top:0;
+    top: 0;
     z-index: 4;
     background: #202020;
-    @media only screen and (max-width:768px){
-        grid-template-columns:1em auto 1fr auto 1em;  
-        grid-template-areas: 
-        ". logo . menu-icon .";        
+    @media only screen and (max-width: 768px) {
+        grid-template-columns: 1em auto 1fr auto 1em;
+        grid-template-areas: ". logo . menu-icon .";
     }
-    .logo{
+    .logo {
         grid-area: logo;
-        img{            
+        img {
             height: 2rem;
             cursor: pointer;
         }
     }
-    .nav-menu{
+    .nav-menu {
         grid-area: links;
         list-style: none;
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
         align-items: center;
-        gap:2rem; 
+        gap: 2rem;
         position: relative;
         height: 100%;
-        .nav-link{     
+        .nav-link {
             cursor: pointer;
             height: 100%;
             display: flex;
             align-items: center;
-            font-size: .75rem;
-            color:#8E8E8E;
+            font-size: 0.75rem;
+            color: #8e8e8e;
             text-decoration: none;
             text-transform: uppercase;
             font-weight: 800;
             letter-spacing: 1.5px;
-            &:hover{                    
-                color:#e7e7e7;
+            &:hover {
+                color: #e7e7e7;
             }
         }
-        @media only screen and (max-width:768px){
+        @media only screen and (max-width: 768px) {
             opacity: 0;
             height: 70vh;
             width: 100vw;
-            top:0;
+            top: 0;
             position: fixed;
             flex-direction: column;
             justify-content: center;
-            gap:0;
+            gap: 0;
             padding: 100px 0;
-            left:-1000px;
-            background-color: #202020;              
-            transition: all .2s ease-in-out; 
-            .nav-link{
+            left: -1000px;
+            background-color: #202020;
+            transition: all 0.2s ease-in-out;
+            .nav-link {
                 display: flex;
                 justify-content: center;
-                &:hover{
-                    border:none;
-                }   
+                &:hover {
+                    border: none;
+                }
             }
         }
     }
-    .active{
+    .active {
         opacity: 1;
         left: 0;
-        transition: left .2s ease-in-out;    
-    }        
-    .menu-icon{
+        transition: left 0.2s ease-in-out;
+    }
+    .menu-icon {
         cursor: pointer;
         z-index: 5;
         display: none;
         font-size: 1.5rem;
-        grid-area: menu-icon;   
-        color:#e7e7e7;        
-        @media only screen and (max-width:768px){                              
+        grid-area: menu-icon;
+        color: #e7e7e7;
+        @media only screen and (max-width: 768px) {
             display: flex;
             justify-content: flex-end;
             align-items: center;
@@ -95,299 +93,307 @@
     }
 }
 
-
-.home{
-    color:#e7e7e7;
-    .bg{
+.home {
+    color: #e7e7e7;
+    .bg {
         height: 65vh;
-        background-image: url('https://pbs.twimg.com/media/EinRHgcWsAEfXXx.jpg');
+        background-image: url("https://pbs.twimg.com/media/EinRHgcWsAEfXXx.jpg");
         background-position: center;
         background-size: cover;
-        background-attachment: fixed;   
+        background-attachment: fixed;
         background-repeat: no-repeat;
-        @media only screen and (orientation: portrait){
-            background-image: url('https://image.isu.pub/140121234930-e06afffaddb5b5aade1af41135a1136d/jpg/page_1.jpg');
+        @media only screen and (orientation: portrait) {
+            background-image: url("https://image.isu.pub/140121234930-e06afffaddb5b5aade1af41135a1136d/jpg/page_1.jpg");
         }
     }
-    .featured{
-        min-height: 30vh; 
-        padding:1rem;
-        color:#000;
+    .featured {
+        min-height: 30vh;
+        padding: 1rem;
+        color: #000;
         text-transform: uppercase;
-        background-color: #f1f1f1;  
-        a{
+        background-color: #f1f1f1;
+        a {
             text-decoration: none;
-            color:#2C2C2C;
+            color: #2c2c2c;
             font-weight: lighter;
         }
-        line-height: 17px;    
-        h2{
+        line-height: 17px;
+        h2 {
             font-weight: 550;
             text-align: center;
             font-size: 1.2rem;
-            padding:0 1rem 2rem 1rem;
+            padding: 0 1rem 2rem 1rem;
             overflow: hidden;
-            span{
+            span {
                 position: relative;
-                display: inline-block;            
-                &::before, &::after{
-                    border-bottom:1px solid #000;
-                    border-top:0 solid #000;
-                    content:"";
-                    height:7px;
-                    position:absolute;
-                    top:25%;
-                    width:1000px;
+                display: inline-block;
+                &::before,
+                &::after {
+                    border-bottom: 1px solid #000;
+                    border-top: 0 solid #000;
+                    content: "";
+                    height: 7px;
+                    position: absolute;
+                    top: 25%;
+                    width: 1000px;
                 }
-                &::before{
-                    right:100%;
-                    margin-right:15px;
+                &::before {
+                    right: 100%;
+                    margin-right: 15px;
                 }
-                &::after{
-                    left:100%;
-                    margin-left:15px;
+                &::after {
+                    left: 100%;
+                    margin-left: 15px;
                 }
             }
         }
-        .images{
+        .images {
             display: flex;
-            gap:5rem;
+            gap: 5rem;
             justify-content: center;
             align-items: flex-start;
             min-height: 30vh;
             &::-webkit-scrollbar {
                 width: 0px;
-              }
-              &::-webkit-scrollbar-track {
-                background: #f1f1f1; 
-              }
-              &::-webkit-scrollbar-thumb {
+            }
+            &::-webkit-scrollbar-track {
+                background: #f1f1f1;
+            }
+            &::-webkit-scrollbar-thumb {
                 background: #9c9c9cc0;
-              }
-              &::-webkit-scrollbar-thumb:hover {
+            }
+            &::-webkit-scrollbar-thumb:hover {
                 background: #9c9c9c;
-              }
-               
-              
-            @media only screen and (max-width:1160px) {
+            }
+
+            @media only screen and (max-width: 1160px) {
                 justify-content: flex-start;
-            }  
-            .img{
-                width: 10rem;      
+            }
+            .img {
+                width: 10rem;
                 display: flex;
-                flex-direction: column;      
+                flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                gap:1rem;  
-                margin:0 0 1rem 0;
-                img{
+                gap: 1rem;
+                margin: 0 0 1rem 0;
+                img {
                     height: 25rem;
                 }
-                p{
+                p {
                     text-align: center;
                     word-wrap: break-word;
-                    font-size: .75rem;
+                    font-size: 0.75rem;
                 }
             }
         }
     }
 }
-.guitars{
+.guitars {
     min-height: 100vh;
-    .bg{        
+    .bg {
         height: 40vh;
-        background-image: url('https://images.ctfassets.net/4jcppgetbqrc/6k2U3nRBIcq8iM6QCAUksa/d120abf8a175da787ce1913e89960a26/CS-Dinky-Coral-Sea.jpg');
-        filter:grayscale(100%);
+        background-image: url("https://images.ctfassets.net/4jcppgetbqrc/6k2U3nRBIcq8iM6QCAUksa/d120abf8a175da787ce1913e89960a26/CS-Dinky-Coral-Sea.jpg");
+        filter: grayscale(100%);
         background-position: 0 -250px;
         background-attachment: fixed;
         position: relative;
-        &::before{
+        &::before {
             content: "";
             height: 100%;
             width: 100%;
             position: absolute;
             background-color: rgba(0, 0, 0, 0.75);
         }
-        &::after{
+        &::after {
             content: "Gitárok";
             position: absolute;
-            left:50%;
-            top:50%;
-            transform:translate(-50%, -50%);
-            color:#f1f1f1;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            color: #f1f1f1;
             font-size: 3rem;
             letter-spacing: 7px;
             font-weight: 700;
             text-transform: uppercase;
         }
     }
-    .guitars-container{
+    .guitars-container {
         min-height: 100vh;
         background: #020202;
-        display: flex; 
+        display: flex;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        gap:2rem;   
-        a{text-decoration: none;}
-        padding:4rem 0;
+        gap: 2rem;
+        a {
+            text-decoration: none;
+        }
+        padding: 4rem 0;
         position: relative;
-        .guitar{
+        .guitar {
             height: 26rem;
             width: 24rem;
             background-attachment: fixed;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
-            align-items: center;    
-            overflow: hidden;  
+            align-items: center;
+            overflow: hidden;
             text-align: center;
             cursor: pointer;
-            background: rgb(26,16,31);
-            background: linear-gradient(106deg, rgba(26,16,31,1) 0%, rgba(23,24,40,1) 60%, rgba(23,23,39,1) 87%, rgba(23,22,38,1) 97%);   
-            @media only screen and (orientation:landscape){
-                &:hover .img img{
+            background: rgb(26, 16, 31);
+            background: linear-gradient(
+                106deg,
+                rgba(26, 16, 31, 1) 0%,
+                rgba(23, 24, 40, 1) 60%,
+                rgba(23, 23, 39, 1) 87%,
+                rgba(23, 22, 38, 1) 97%
+            );
+            @media only screen and (orientation: landscape) {
+                &:hover .img img {
                     width: 7.5rem;
-                    transform:rotate(45deg);
-                    transition: all .3s ease-in-out;
+                    transform: rotate(45deg);
+                    transition: all 0.3s ease-in-out;
                 }
             }
-            .img{
-                img{
+            .img {
+                img {
                     width: 14rem;
-                    transition: all .3s ease-in-out;
+                    transition: all 0.3s ease-in-out;
                 }
-            }         
-            @media only screen and (max-width:456px){
-                width: 80vw;
-                height: 55vh;                
             }
-            .name{
-                color:#fff;
+            @media only screen and (max-width: 456px) {
+                width: 80vw;
+                height: 55vh;
+            }
+            .name {
+                color: #fff;
                 min-height: 7vh;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 width: 100%;
                 line-height: 20px;
-                font-size: .85rem;  
+                font-size: 0.85rem;
                 background: #020202;
             }
         }
     }
 }
-.guitar-specs{
+.guitar-specs {
     background-color: rgba(0, 0, 0, 0.496);
     min-height: 100vh;
-    .top{
-        background:linear-gradient(to bottom, #0e0e0e 20%, #202020 50%, #f1f1f1 50%, #f1f1f1 100%);
+    .top {
+        background: linear-gradient(to bottom, #0e0e0e 20%, #202020 50%, #f1f1f1 50%, #f1f1f1 100%);
         height: 110vh;
-        color:#f1f1f1;
-        padding:0 2rem;
+        color: #f1f1f1;
+        padding: 0 2rem;
         display: grid;
-        grid-template-rows:  .5fr 1fr 1fr 1fr .5fr;
-        .name-cost{
+        grid-template-rows: 0.5fr 1fr 1fr 1fr 0.5fr;
+        .name-cost {
             text-align: center;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            font-size: clamp(.6rem, 1.1vw, 2rem);
-            padding:0 0 1rem 0;
+            font-size: clamp(0.6rem, 1.1vw, 2rem);
+            padding: 0 0 1rem 0;
         }
-        .big-img{
+        .big-img {
             display: flex;
             justify-content: center;
             align-items: center;
-            img{
+            img {
                 width: 85%;
             }
-        }.scrollContainer{
-            padding:0 0 2rem 0;
+        }
+        .scrollContainer {
+            padding: 0 0 2rem 0;
             display: flex;
             justify-content: flex-start;
             align-items: flex-end;
             width: 90%;
-            gap:1rem;
+            gap: 1rem;
             margin: 0 auto;
             &::-webkit-scrollbar {
-             width: 0px;
-             }
-             &::-webkit-scrollbar-track {
-                 background: #f1f1f1; 
-             }
-             &::-webkit-scrollbar-thumb {
-                 background: #9c9c9cc0;
-             }
-             &::-webkit-scrollbar-thumb:hover {
-                 background: #9c9c9c;
-             }
-             img{
-                 height: 3rem;
-                 margin: 0 auto;
-                 width: auto;
-                 cursor: pointer;
-             }
+                width: 0px;
+            }
+            &::-webkit-scrollbar-track {
+                background: #f1f1f1;
+            }
+            &::-webkit-scrollbar-thumb {
+                background: #9c9c9cc0;
+            }
+            &::-webkit-scrollbar-thumb:hover {
+                background: #9c9c9c;
+            }
+            img {
+                height: 3rem;
+                margin: 0 auto;
+                width: auto;
+                cursor: pointer;
+            }
         }
     }
-    .full-screen-image{
+    .full-screen-image {
         background-color: #202020e8;
         position: fixed;
-        top:50%;
-        left:50%;
+        top: 50%;
+        left: 50%;
         transform: translate(-50%, -50%);
         width: 100vw;
         height: 100vh;
         z-index: 4;
         display: grid;
         grid-template-rows: 14% 72% 14%;
-        .exit{
+        .exit {
             display: flex;
             justify-content: flex-end;
-            padding:1rem 2rem 0 0;
+            padding: 1rem 2rem 0 0;
             align-items: flex-start;
-            color:#f1f1f1;
+            color: #f1f1f1;
             font-size: 2rem;
-            i{
+            i {
                 cursor: pointer;
             }
         }
-        .f-img{
+        .f-img {
             display: flex;
             justify-content: center;
             align-items: center;
-            img{
+            img {
                 border-radius: 3px;
-                padding:1rem;
+                padding: 1rem;
                 background-color: #fff;
                 object-fit: contain;
                 width: 100%;
                 max-height: 500px;
             }
         }
-        .arrows{
-            color:#f1f1f1;
+        .arrows {
+            color: #f1f1f1;
             font-size: 2rem;
             display: flex;
             justify-content: center;
             align-items: center;
-            gap:2rem;
-            i{
+            gap: 2rem;
+            i {
                 cursor: pointer;
             }
         }
     }
 }
-.footer{
-    .top{
+.footer {
+    .top {
         background: #202020;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding:4rem 0;
-        gap:2rem;
-        form{
+        padding: 4rem 0;
+        gap: 2rem;
+        form {
             position: relative;
             min-width: 65vw;
             min-height: 7vh;
@@ -395,59 +401,59 @@
             justify-content: space-between;
             align-items: center;
             background: #fff;
-            padding:.1rem;
-            @media only screen and (max-width:580px){
+            padding: 0.1rem;
+            @media only screen and (max-width: 580px) {
                 min-width: 90vw;
             }
-            @media only screen and (max-width:413px){
+            @media only screen and (max-width: 413px) {
                 flex-direction: column;
                 justify-content: center;
                 background: transparent;
             }
-            input{
+            input {
                 flex: 2;
-                color:#7A8AB0;
+                color: #7a8ab0;
                 padding: 0 0 0 1rem;
                 text-transform: uppercase;
                 letter-spacing: 1.5px;
-                border:none;
-                font-size: clamp(.55rem, 2vw, 1rem);
-                &:focus{
+                border: none;
+                font-size: clamp(0.55rem, 2vw, 1rem);
+                &:focus {
                     outline: none;
                 }
-                @media only screen and (max-width:413px){
-                    padding:1rem;
+                @media only screen and (max-width: 413px) {
+                    padding: 1rem;
                     min-width: 80vw;
                     text-align: center;
                 }
             }
-            button{
+            button {
                 background-color: #000;
-                color:#f1f1f1;
+                color: #f1f1f1;
                 font-size: 1.15rem;
-                outline:none;
-                border:none;
+                outline: none;
+                border: none;
                 min-width: 2rem;
                 cursor: pointer;
-                padding:.5rem;
-                @media only screen and (max-width:413px){
+                padding: 0.5rem;
+                @media only screen and (max-width: 413px) {
                     min-width: 80vw;
                 }
             }
         }
-        img{
+        img {
             height: clamp(3rem, 6vw, 15rem);
         }
     }
-    .bottom{
+    .bottom {
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        padding:0 1rem;
-        gap:1rem;
-        font-size: clamp(.55rem, .8vw, 1rem);
+        padding: 0 1rem;
+        gap: 1rem;
+        font-size: clamp(0.55rem, 0.8vw, 1rem);
         text-transform: uppercase;
-        color:#939393;
+        color: #939393;
         background-color: #000;
         height: 7vh;
     }
