--- a/src/SCSS/Footer/Footer.scss
+++ b/src/SCSS/Footer/Footer.scss
@@ -24,9 +24,9 @@
                 justify-content: center;
                 background: transparent;
             }
-            input {
+            .input {
                 flex: 2;
-                color: #7a8ab0;
+                color: #434753;
                 padding: 0 0 0 1rem;
                 text-transform: uppercase;
                 letter-spacing: 1.5px;
@@ -39,6 +39,9 @@
                     padding: 1rem;
                     min-width: 80vw;
                     text-align: center;
+                }
+                &::placeholder{
+                    color: #434753;
                 }
             }
             button {
