--- a/src/SCSS/Home/Home.css
+++ b/src/SCSS/Home/Home.css
@@ -77,6 +77,7 @@
       -ms-flex-align: start;
           align-items: flex-start;
   min-height: 30vh;
+  padding: 0 2rem;
 }
 
 .home .featured .images::-webkit-scrollbar {
@@ -104,7 +105,7 @@
 }
 
 .home .featured .images .img {
-  width: 10rem;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
