--- a/src/SCSS/Home/Home.scss
+++ b/src/SCSS/Home/Home.scss
@@ -74,8 +74,9 @@
             @media only screen and (max-width: 1160px) {
                 justify-content: flex-start;
             }
+            padding:0 2rem;
             .img {
-                width: 10rem;
+                width: 100%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
