--- a/src/SCSS/Main.css
+++ b/src/SCSS/Main.css
@@ -68,14 +68,15 @@
 }
 
 .nav .nav-menu .nav-link {
-  cursor: pointer;
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  cursor: pointer;
+  height: 100%;
   font-size: 0.75rem;
   color: #8e8e8e;
   text-decoration: none;
@@ -102,7 +103,7 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    gap: 0;
+    gap: 2rem;
     padding: 100px 0;
     left: -1000px;
     background-color: #202020;
@@ -231,6 +232,7 @@
       -ms-flex-align: start;
           align-items: flex-start;
   min-height: 30vh;
+  padding: 0 2rem;
 }
 
 .home .featured .images::-webkit-scrollbar {
@@ -258,7 +260,7 @@
 }
 
 .home .featured .images .img {
-  width: 10rem;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -632,11 +634,11 @@
   }
 }
 
-.footer .top form input {
+.footer .top form .input {
   -webkit-box-flex: 2;
       -ms-flex: 2;
           flex: 2;
-  color: #7a8ab0;
+  color: #434753;
   padding: 0 0 0 1rem;
   text-transform: uppercase;
   letter-spacing: 1.5px;
@@ -644,16 +646,32 @@
   font-size: clamp(0.55rem, 2vw, 1rem);
 }
 
-.footer .top form input:focus {
+.footer .top form .input:focus {
   outline: none;
 }
 
 @media only screen and (max-width: 413px) {
-  .footer .top form input {
+  .footer .top form .input {
     padding: 1rem;
     min-width: 80vw;
     text-align: center;
   }
+}
+
+.footer .top form .input::-webkit-input-placeholder {
+  color: #434753;
+}
+
+.footer .top form .input:-ms-input-placeholder {
+  color: #434753;
+}
+
+.footer .top form .input::-ms-input-placeholder {
+  color: #434753;
+}
+
+.footer .top form .input::placeholder {
+  color: #434753;
 }
 
 .footer .top form button {
