--- a/src/SCSS/Guitars/Guitars.css
+++ b/src/SCSS/Guitars/Guitars.css
@@ -10,6 +10,7 @@
           filter: grayscale(100%);
   background-position: 0 -250px;
   background-attachment: fixed;
+  background-repeat: no-repeat;
   position: relative;
 }
 
