--- a/src/SCSS/Guitars/Guitars.scss
+++ b/src/SCSS/Guitars/Guitars.scss
@@ -6,6 +6,7 @@
         filter: grayscale(100%);
         background-position: 0 -250px;
         background-attachment: fixed;
+        background-repeat: no-repeat;
         position: relative;
         &::before {
             content: "";
