--- a/src/SCSS/Main.css
+++ b/src/SCSS/Main.css
@@ -299,6 +299,7 @@
           filter: grayscale(100%);
   background-position: 0 -250px;
   background-attachment: fixed;
+  background-repeat: no-repeat;
   position: relative;
 }
 
