--- a/src/SCSS/Guitars/Guitars.css
+++ b/src/SCSS/Guitars/Guitars.css
@@ -11,6 +11,7 @@
   background-position: 0 -250px;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
 }
 
