--- a/src/SCSS/Guitars/Guitars.scss
+++ b/src/SCSS/Guitars/Guitars.scss
@@ -7,6 +7,7 @@
         background-position: 0 -250px;
         background-attachment: fixed;
         background-repeat: no-repeat;
+        background-size: cover;
         position: relative;
         &::before {
             content: "";
