--- a/src/SCSS/Main.css
+++ b/src/SCSS/Main.css
@@ -300,6 +300,7 @@
   background-position: 0 -250px;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
 }
 
