--- a/src/SCSS/GuitarSpecs/GuitarSpecs.scss
+++ b/src/SCSS/GuitarSpecs/GuitarSpecs.scss
@@ -23,6 +23,9 @@
             align-items: center;
             img {
                 width: 85%;
+                @media screen and (max-width:768px){
+                    width: 105%;
+                }
             }
         }
         .scrollContainer {
